--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+	<script type="text/javascript" src="lib/d3.min.js"></script>
 	<script type="text/javascript" src="js/faces.js"></script>
 
 </head>
